tests/samples/negative/types/const_initializer_cycle.ax
module const_initializer_cycle;

const A: i32 = B;
const B: i32 = A;

fn main() -> i32 {
  return A;
}
